--- a/css/login.css
+++ b/css/login.css
@@ -124,7 +124,7 @@ input::placeholder{font-size: 1rem}
 }
 
 .btn-group{
-    position: absolute;
+    position: fixed;
     top: 1%;
     right: 1%;
 }
